@@ -1,3 +1,4 @@
 .precomp/
 /ReadWriteLock-*
 /releases/
+*.rakucov
