@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/ReadWriteLock/workflows/test/badge.svg)](https://github.com/lizmat/ReadWriteLock/actions)
+[![Actions Status](https://github.com/lizmat/ReadWriteLock/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/ReadWriteLock/actions) [![Actions Status](https://github.com/lizmat/ReadWriteLock/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/ReadWriteLock/actions) [![Actions Status](https://github.com/lizmat/ReadWriteLock/actions/workflows/windows.yml/badge.svg)](https://github.com/lizmat/ReadWriteLock/actions)
 
 TITLE
 =====
@@ -146,7 +146,9 @@ You can upgrade a lock that you are holding in shared mode to an exclusive acces
 AUTHORS
 =======
 
-Robert Lemmen (2018-2020), Elizabeth Mattijsen <liz@raku.rocks> (2021-)
+  * Robert Lemmen (2018-2020)
+
+  * Elizabeth Mattijsen <liz@raku.rocks> (2021-)
 
 Source can be located at: https://github.com/lizmat/ReadWriteLock . Comments and Pull Requests are welcome.
 
@@ -155,7 +157,9 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2018-2020 Robert Lemmen, 2021, 2024 Elizabeth Mattijsen
+Copyright 2018-2020 Robert Lemmen
+
+Copyright 2021, 2024, 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
