@@ -1,12 +1,14 @@
 Revision history for ReadWriteLock
 
 {{$NEXT}}
+    - Add CI badge for each OS
+    - Update copyright year
 
 0.3.2  2024-06-25T12:57:05+02:00
     - Modernize pod
     - Modernize code a bit, mostly esthetics
     - Add sponsor link and button
-    - Update cpoyright year
+    - Update copyright year
 
 0.3.1  2021-09-10T19:29:06+02:00
     - Add missing AUTHORS section to pod
